# SCPD_Snake_Linux

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  scpd_snake_linux.glade.bak  scpd_snake_linux.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  main.c  scpd_snake_linux
